--- a/.github/workflows/auto-aprove-sync-files.yml
+++ b/.github/workflows/auto-aprove-sync-files.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   auto-approve-synced-files:
     name: Auto approve synced files
-    if: contains(github.event.pull_request.title, 'Synced file(s)') && github.actor == 'rakambda' && github.event.pull_request.base.ref == format('refs/heads/{}', github.event.repository.default_branch)
+    if: contains(github.event.pull_request.title, 'Synced file(s)') && github.actor == 'rakambda' && github.event.pull_request.base.ref == github.event.repository.default_branch
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.4.0
@@ -14,7 +14,7 @@ jobs:
         with:
           github-token: "${{ secrets.SYNC_TOKEN }}"
       - name: Pull Request merge
-        uses: KeisukeYamashita/auto-pull-request-merge@v1
+        uses: KeisukeYamashita/auto-pull-request-merge@v1.0.6
         with:
           token: "${{ secrets.SYNC_TOKEN }}"
           strategy: squash
