--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -5,6 +5,15 @@ on:
   workflow_dispatch:
 
 jobs:
+  check:
+    name: Check
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout source
+      uses: actions/checkout@v3
+    - name: Python Syntax Checker
+      uses: cclauss/Find-Python-syntax-errors-action@v0.2.0
+
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
