--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -17,6 +17,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    needs: check
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
     steps:
       - name: Checkout source
