--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
     - name: Checkout source
       uses: actions/checkout@v3
+    - run: cd src
     - name: Python Syntax Checker
       uses: cclauss/Find-Python-syntax-errors-action@v0.2.0
 
