--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build
 
 on:
   push:
@@ -6,44 +6,17 @@ on:
 
 jobs:
   check:
-    name: Check
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout source
-      uses: actions/checkout@v3
-    - run: cd src
-    - name: Python Syntax Checker
-      uses: cclauss/Find-Python-syntax-errors-action@v0.2.0
-
+    uses: Rakambda/rakambda-github-workflows/.github/workflows/python-build.yml@main
+    with:
+      source-folder: src
+      
   deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
+    uses: Rakambda/rakambda-github-workflows/.github/workflows/docker-publish.yml@main
     needs: check
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
-    steps:
-      - name: Checkout source
-        uses: actions/checkout@v3
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2.2.0
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2.9.1
-      - name: Login to DockerHub
-        uses: docker/login-action@v2.2.0
-        with:
-          registry: ${{ secrets.DOCKER_REGISTRY }}
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v4.1.1
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ secrets.DOCKER_REGISTRY }}/rakambda/plex-deleter:latest
-          platforms: linux/amd64
-          build-args: BUILDX_QEMU_ENV=true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+    with:
+      docker-image: ${{ vars.DOCKER_IMAGE }}
+    secrets:
+      docker-repo: ${{ secrets.DOCKER_REPO }}
+      docker-username: ${{ secrets.DOCKER_USERNAME }}
+      docker-token: ${{ secrets.DOCKER_TOKEN }}
