--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -13,7 +13,7 @@ jobs:
   deploy:
     uses: Rakambda/rakambda-github-workflows/.github/workflows/docker-publish.yml@main
     needs: check
-    if: github.ref == ${{ github.event.repository.default_branch }}
+    if: github.ref == github.event.repository.default_branch
     with:
       docker-image: ${{ vars.DOCKER_IMAGE }}
     secrets:
