--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -20,3 +20,4 @@ jobs:
       docker-repo: ${{ secrets.DOCKER_REPO }}
       docker-username: ${{ secrets.DOCKER_USERNAME }}
       docker-token: ${{ secrets.DOCKER_TOKEN }}
+      docker-tag: latest
