--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -6,17 +6,19 @@ on:
 
 jobs:
   check:
-    uses: Rakambda/rakambda-github-workflows/.github/workflows/python-build.yml@main
+    uses: RakambdaOrg/rakambda-github-workflows/.github/workflows/python-build.yml@main
     with:
       source-folder: src
+      runs-on: self-hosted
       
   deploy:
-    uses: Rakambda/rakambda-github-workflows/.github/workflows/docker-publish.yml@main
+    uses: RakambdaOrg/rakambda-github-workflows/.github/workflows/docker-publish.yml@main
     needs: check
     if: ${{ github.ref == format('refs/heads/{0}', github.event.repository.default_branch) }}
     with:
       docker-image: ${{ vars.DOCKER_IMAGE }}
       docker-tag: latest
+      runs-on: self-hosted
     secrets:
       docker-repo: ${{ secrets.DOCKER_REPO }}
       docker-username: ${{ secrets.DOCKER_USERNAME }}
