--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,6 +55,8 @@ server:
 app:
   applicationUrl: "http://app.url"
   exclude-tag: "no-deleter"
+  plex:
+    endpoint: "https://plex.tv"
   overseerr:
     endpoint: "https://overseerr"
     api-key: "api-key"
