Add dry delete configuration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -71,6 +71,7 @@ app:
     api-key: "api-key"
   deletion:
     days-delay: 5
+    dry-delete: false
     remote-path-mappings: { }
   notify-watchlist:
     daysDelay: 7
