--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,6 +58,7 @@ app:
   applicationUrl: "http://app.url"
   exclude-tag: "no-deleter"
   plex:
+    app-endpoint: "https://app.plex.tv"
     endpoint: "https://plex.tv"
   overseerr:
     endpoint: "https://overseerr"
