--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
   jpa:
     generate-ddl: false
     database-platform: org.hibernate.dialect.MariaDBDialect
-    open-in-view: false
+    open-in-view: true
     hibernate:
       ddl-auto: none
   mail:
