--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,9 +5,11 @@ names-version = "0.51.0"
 sptringboot-version = "3.3.4"
 sptringboot-dm-version = "1.1.6"
 graalvm-version = "0.10.3"
+logback-ecs-version = "1.6.0"
 
 [libraries]
 jetbrainsAnnotations = { group = "org.jetbrains", name = "annotations", version.ref = "jetbrains-annotations-version" }
+logbackEcs = { group = "co.elastic.logging", name = "logback-ecs-encoder", version.ref = "logback-ecs-version" }
 
 [plugins]
 sptringboot = { id = "org.springframework.boot", version.ref = "sptringboot-version" }
