--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,18 @@
 [versions]
 jetbrains-annotations-version = "26.0.2"
 
-sptringboot-version = "3.4.3"
+sptringboot-version = "3.5.0"
 sptringboot-dm-version = "1.1.7"
 graalvm-version = "0.10.6"
 logback-ecs-version = "1.7.0"
+webauthn4j-version = "0.29.3.RELEASE"
+thymeleafSpringSecurity-version = "3.1.3.RELEASE"
 
 [libraries]
 jetbrainsAnnotations = { group = "org.jetbrains", name = "annotations", version.ref = "jetbrains-annotations-version" }
 logbackEcs = { group = "co.elastic.logging", name = "logback-ecs-encoder", version.ref = "logback-ecs-version" }
+webauthn4j = { group = "com.webauthn4j", name = "webauthn4j-core", version.ref = "webauthn4j-version" }
+thymeleafSpringSecurity = { group = "org.thymeleaf.extras", name = "thymeleaf-extras-springsecurity6", version.ref = "thymeleafSpringSecurity-version" }
 
 [plugins]
 sptringboot = { id = "org.springframework.boot", version.ref = "sptringboot-version" }
