Get watch history from plex community

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -82,6 +82,8 @@ app:
   plex:
     endpoint: "https://plex.tv"
     app-endpoint: "https://app.plex.tv"
+    communityEndpoint: "https://community.plex.tv/api"
+    communityToken: "token"
     server-id: "server-id"
   tvdb:
     endpoint: "https://api4.thetvdb.com"
