--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,12 +6,14 @@ logback-ecs-version = "1.7.0"
 webauthn4j-version = "0.30.1.RELEASE"
 thymeleafSpringSecurity-version = "3.1.3.RELEASE"
 mjml4j-version = "1.1.4"
+htmlcompressor-version = "1.5.2"
 
 [libraries]
 logbackEcs = { group = "co.elastic.logging", name = "logback-ecs-encoder", version.ref = "logback-ecs-version" }
 webauthn4j = { group = "com.webauthn4j", name = "webauthn4j-core", version.ref = "webauthn4j-version" }
 thymeleafSpringSecurity = { group = "org.thymeleaf.extras", name = "thymeleaf-extras-springsecurity6", version.ref = "thymeleafSpringSecurity-version" }
 mjml4j = { group = "ch.digitalfondue.mjml4j", name = "mjml4j", version.ref = "mjml4j-version" }
+htmlcompressor = { group = "com.googlecode.htmlcompressor", name = "htmlcompressor", version.ref = "htmlcompressor-version" }
 
 [plugins]
 sptringboot = { id = "org.springframework.boot", version.ref = "sptringboot-version" }
