--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ webauthn4j-version = "0.31.0.RELEASE"
 thymeleafSpringSecurity-version = "3.1.3.RELEASE"
 mjml4j-version = "1.1.5"
 htmlcompressor-version = "1.5.2"
+openapi-version = "7.19.0"
 
 [libraries]
 logbackEcs = { group = "co.elastic.logging", name = "logback-ecs-encoder", version.ref = "logback-ecs-version" }
@@ -19,3 +20,4 @@ htmlcompressor = { group = "com.googlecode.htmlcompressor", name = "htmlcompress
 sptringboot = { id = "org.springframework.boot", version.ref = "sptringboot-version" }
 sptringbootDependencyManagement = { id = "io.spring.dependency-management", version.ref = "sptringboot-dm-version" }
 graalvm = { id = "org.graalvm.buildtools.native", version.ref = "graalvm-version" }
+openapi = { id = "org.openapi.generator", version.ref = "openapi-version" }
